检测报告信息.html

--- a/检测报告信息.html
+++ b/检测报告信息.html
@@ -406,7 +406,7 @@ body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relati
 </tr>
 <tr>
 <th bgcolor="CCFFFF" width="20%">委托单位</th>
-<td>济宁冠中建设工程有限公司</td>
+<td>恩贝斯复材（上海）科技有限公司</td>
 </tr>
 <tr>
 <th bgcolor="CCFFFF" width="20%">工程名称</th>
